@@ -161,12 +161,11 @@ multiple.meanvar.poisson=function(data,mul.method="PELT",penalty="MBIC",pen.valu
   if(!((mul.method=="PELT")||(mul.method=="BinSeg")||(mul.method=="SegNeigh"))){
     stop("Multiple Method is not recognised")
   }
-  if(penalty!="MBIC"){
+  costfunc = "meanvar.poisson"
+  if(penalty=="MBIC"){
     if(mul.method=="SegNeigh"){
       stop('MBIC penalty not implemented for SegNeigh method, please choose an alternative penalty')
     }
-    costfunc = "meanvar.poisson"
-  }else{
     costfunc = "meanvar.poisson.mbic"
   }
   
